Light SASS refactoring. * eBoard mobile * Helper classes * Typography fixes: About. * Form Styles

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,11 @@
 /// MY COLORS
 $nucd-red: #E45044;
+
 $nucd-muted-teal: #35889B;
 $nucd-muddy-teal: #547980;
 $nucd-bright-teal: #5DBEA9;
+
+$nucd-gray: #757A7C;
 
 /// Overwrite Bootstrap Variables.
 
