--- a/sass/base/_helpers.scss
+++ b/sass/base/_helpers.scss
@@ -1,5 +1,4 @@
-// @HACK: Please rename to something sensible.
-.content-wrap {
+.heavy-padded-bottom {
   margin-bottom: 100px;
 }
 
@@ -9,6 +8,6 @@
 }
 
 img.social {
-    width: 50px;
-    margin: 6px 4px;
+  width: 50px;
+  margin: 6px 4px;
 }
