--- a/style.css
+++ b/style.css
@@ -486,7 +486,8 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1); }
 
 small,
-.small {
+.small,
+#mc_embed_signup .indicates-required {
   font-size: 80%;
   font-weight: normal; }
 
@@ -1554,7 +1555,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 .input-group-lg > .input-group-btn > select.button:not([size]):not([multiple]) {
   height: 3.16667rem; }
 
-.form-group {
+.form-group, #mc_embed_signup .mc-field-group {
   margin-bottom: 1rem; }
 
 .form-text {
@@ -1668,7 +1669,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#d9534f' viewBox='-2 -2 7 7'%3E%3Cpath stroke='%23d9534f' d='M0 0l3 3m0-3L0 3'/%3E%3Ccircle r='.5'/%3E%3Ccircle cx='3' r='.5'/%3E%3Ccircle cy='3' r='.5'/%3E%3Ccircle cx='3' cy='3' r='.5'/%3E%3C/svg%3E"); }
 
 @media (min-width: 576px) {
-  .form-inline .form-group {
+  .form-inline .form-group, .form-inline #mc_embed_signup .mc-field-group, #mc_embed_signup .form-inline .mc-field-group {
     display: inline-block;
     margin-bottom: 0;
     vertical-align: middle; }
@@ -3787,11 +3788,17 @@ base::-moz-progress-bar,
     border-color: #0275d8; }
     .list-group-item.active .list-group-item-heading,
     .list-group-item.active .list-group-item-heading > small,
-    .list-group-item.active .list-group-item-heading > .small, .list-group-item.active:focus .list-group-item-heading,
+    .list-group-item.active .list-group-item-heading > .small,
+    .list-group-item.active #mc_embed_signup .list-group-item-heading > .indicates-required, #mc_embed_signup
+    .list-group-item.active .list-group-item-heading > .indicates-required, .list-group-item.active:focus .list-group-item-heading,
     .list-group-item.active:focus .list-group-item-heading > small,
-    .list-group-item.active:focus .list-group-item-heading > .small, .list-group-item.active:hover .list-group-item-heading,
+    .list-group-item.active:focus .list-group-item-heading > .small,
+    .list-group-item.active:focus #mc_embed_signup .list-group-item-heading > .indicates-required, #mc_embed_signup
+    .list-group-item.active:focus .list-group-item-heading > .indicates-required, .list-group-item.active:hover .list-group-item-heading,
     .list-group-item.active:hover .list-group-item-heading > small,
-    .list-group-item.active:hover .list-group-item-heading > .small {
+    .list-group-item.active:hover .list-group-item-heading > .small,
+    .list-group-item.active:hover #mc_embed_signup .list-group-item-heading > .indicates-required, #mc_embed_signup
+    .list-group-item.active:hover .list-group-item-heading > .indicates-required {
       color: inherit; }
     .list-group-item.active .list-group-item-text, .list-group-item.active:focus .list-group-item-text, .list-group-item.active:hover .list-group-item-text {
       color: #a8d6fe; }
@@ -4960,21 +4967,11 @@ form input[type=checkbox] {
   margin-right: 5px; }
 
 form input[type=text], form input[type=email] {
-  width: 100%;
-  display: block;
   border: 1px solid #999;
-  background-color: #acacac;
-  color: #eee;
-  font-family: 'Open Sans', sans-serif;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  /*
-  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  */ }
+  color: #333;
+  font-family: 'Open Sans', sans-serif; }
 
-.content-wrap {
+.heavy-padded-bottom {
   margin-bottom: 100px; }
 
 .row-padded {
@@ -5015,7 +5012,7 @@ h4 {
   padding-bottom: 2px;
   width: 33.3333%; }
 
-p.small {
+p.small, #mc_embed_signup p.indicates-required {
   font-weight: 300;
   font-size: 0.813em;
   color: #444; }
@@ -5277,14 +5274,10 @@ li.gce-feed-1:nth-child(even) {
   content: ' »'; }
 
 #mc_embed_signup .indicates-required {
-  color: #757A7C;
-  font-size: .875em; }
+  color: #757A7C; }
 
 #mc_embed_signup .asterisk {
   color: #E45044; }
-
-#mc_embed_signup .mc-field-group {
-  margin-bottom: 8px; }
 
 /* --------------------------- Widgetized Footer --------------------------- */
 .widget header {
@@ -5308,10 +5301,10 @@ li.gce-feed-1:nth-child(even) {
 
 .about p {
   font-weight: 300;
-  font-size: 1.8em;
+  font-size: 1.25em;
   line-height: 1.5em; }
 
-@media (max-width: 575px) {
+@media (max-width: 991px) {
   .about p {
     font-weight: inherit;
     font-size: inherit; } }
@@ -5343,7 +5336,6 @@ li.gce-feed-1:nth-child(even) {
   .eboard blockquote > footer {
     font-style: normal; }
 
-/* Landscape phone to portrait tablet ------------------ */
 @media (max-width: 767px) {
   .eboard blockquote {
     width: 90%; }
