--- a/sass/base/_form-input.scss
+++ b/sass/base/_form-input.scss
@@ -3,18 +3,7 @@ form input[type=checkbox] {
 }
 
 form input[type=text], form input[type=email] {
-  width: 100%;
-  display: block;
   border: 1px solid #999;
-  background-color: #acacac;
-  color: #eee;
+  color: #333;
   font-family: 'Open Sans', sans-serif;
-  padding-top: 6px;
-  padding-bottom: 6px;
-
-  /*
-  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  */
 }
